--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Réseau climatique</title>
+    <title>Visualisation de la température journalière à Genève au cours du temps</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <h1>Réseau climatique</h1>
-    <h2>Températures moyennes</h2>
+    <h1>Visualisation de la température journalière à Genève au cours du temps</h1>
+    <h2>Graphique représentant la température moyenne de l'air pour une année </h2>
     <a href="https://opendata.swiss/fr/">Source: Données MétéoSuisse téléchargées sur opendata.swiss</a>
 
     <div class="main"></div>
