--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Visualisation de la température journalière à Genève au cours du temps</h1>
-    <h2>Graphique représentant la température moyenne de l'air pour une année </h2>
-    <a href="https://opendata.swiss/fr/">Source: Données MétéoSuisse téléchargées sur opendata.swiss</a>
+    <h2>Graphique représentant l'évolution de la température moyenne de l'air au cours d'une année entière</h2>
+    <a href="https://opendata.swiss/fr/dataset/klimamessnetz-tageswerte">Source: Données MétéoSuisse téléchargées sur opendata.swiss</a>
 
     <div class="main"></div>
     
