Commit code 5 juillet

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <h1>Visualisation de la température journalière à Genève au cours du temps</h1>
-    <h2>Graphique représentant l'évolution de la température moyenne de l'air au cours d'une année entière</h2>
+    <h1>Visualisation de la température journalière à Genève au cours d'une année</h1>
+    <h2>Graphique représentant l'évolution de la température moyenne de l'air de janvier à décembre.</h2>
+    <h3>Exemple de l'année 2012 (en bleu) comparée à l'année 2019 (en rouge).</h3>
     <a href="https://opendata.swiss/fr/dataset/klimamessnetz-tageswerte">Source: Données MétéoSuisse téléchargées sur opendata.swiss</a>
 
     <div class="main"></div>
